--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         <service
             android:name=".MainService"
             android:enabled="true"
-            android:exported="true">
+            android:exported="false">
         </service>
         <activity
             android:name=".MainActivity"
